--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <script src="js/vendor/vendor.min.js"></script>
+    <script src="js/vendor.min.js"></script>
     <script src="js/application.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
