--- a/app/index.html
+++ b/app/index.html
@@ -14,16 +14,55 @@
 
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li class='active'><a href="#/retros">All Retros</a></li>
-          <li><a href="#/retros/new">New Retro</a></li>
+
+          <li ui-sref-active="active"><a ui-sref="root">Home</a></li>
+          <li ui-sref-active="active"><a ui-sref="retros.index">All Retros</a></li>
+          <li ui-sref-active="active"><a ui-sref="retros.new({id: retro._id})">New Retro</a></li>
+
         </ul>
         <h3 class="text-muted">Scrummer</h3>
       </div>
 
-      <!--  NG-VIEW -->
-      <div class="ng-view"></div>
-      <!--  NG-VIEW -->
+
+      <!--  UI-VIEW -->
+      <div ui-view></div>
+      <!--  UI-VIEW -->
+
+
+
+<div ng-controller="ModalDemoCtrl">
+    <script type="text/ng-template" id="myModalContent.html">
+        <div class="modal-header">
+            <h3 class="modal-title">I'm a modal!</h3>
+        </div>
+        <div class="modal-body">
+            <ul>
+                <li ng-repeat="item in items">
+                    <a ng-click="selected.item = item">{{ item }}</a>
+                </li>
+            </ul>
+            Selected: <b>{{ selected.item }}</b>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" ng-click="ok()">OK</button>
+            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
+
+    <button class="btn btn-default" ng-click="open()">Open me!</button>
+    <button class="btn btn-default" ng-click="open('lg')">Large modal</button>
+    <button class="btn btn-default" ng-click="open('sm')">Small modal</button>
+    <button class="btn btn-default" ng-click="toggleAnimation()">Toggle Animation ({{ animationsEnabled }})</button>
+    <div ng-show="selected">Selection from a modal: {{ selected }}</div>
+</div>
+
+
+
+
+
+
+
+
 
       <div class="footer">
         <p>© Scrummer</p>
