--- a/app/index.html
+++ b/app/index.html
@@ -5,64 +5,15 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <script src="js/vendor.min.js"></script>
-    <script src="js/application.js"></script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body class="container" ng-app="myApp">
+  <body class="container">
 
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-
-          <li ui-sref-active="active"><a ui-sref="root">Home</a></li>
-          <li ui-sref-active="active"><a ui-sref="retros.index">All Retros</a></li>
-          <li ui-sref-active="active"><a ui-sref="retros.new({id: retro._id})">New Retro</a></li>
-
-        </ul>
-        <h3 class="text-muted">Scrummer</h3>
+      <div class="jumbotron">
+        <h1>Scrummer!!</h1>
+        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p><a class="btn btn-lg btn-success" href="/auth/google" role="button">Authenicate with Google</a></p>
       </div>
-
-
-      <!--  UI-VIEW -->
-      <div ui-view></div>
-      <!--  UI-VIEW -->
-
-
-
-<div ng-controller="ModalDemoCtrl">
-    <script type="text/ng-template" id="myModalContent.html">
-        <div class="modal-header">
-            <h3 class="modal-title">I'm a modal!</h3>
-        </div>
-        <div class="modal-body">
-            <ul>
-                <li ng-repeat="item in items">
-                    <a ng-click="selected.item = item">{{ item }}</a>
-                </li>
-            </ul>
-            Selected: <b>{{ selected.item }}</b>
-        </div>
-        <div class="modal-footer">
-            <button class="btn btn-primary" ng-click="ok()">OK</button>
-            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-        </div>
-    </script>
-
-    <button class="btn btn-default" ng-click="open()">Open me!</button>
-    <button class="btn btn-default" ng-click="open('lg')">Large modal</button>
-    <button class="btn btn-default" ng-click="open('sm')">Small modal</button>
-    <button class="btn btn-default" ng-click="toggleAnimation()">Toggle Animation ({{ animationsEnabled }})</button>
-    <div ng-show="selected">Selection from a modal: {{ selected }}</div>
-</div>
-
-
-
-
-
-
-
-
 
       <div class="footer">
         <p>© Scrummer</p>
