--- a/app/retro.html
+++ b/app/retro.html
@@ -4,31 +4,28 @@
     <title>Retro</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
     <script src="js/vendor.js"></script>
     <script src="js/application.js"></script>
-
+    <!-- TODO - vendor this!--><script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body class="container" ng-app="myApp">
 
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li ui-sref-active="active"><a ui-sref="root">Home</a></li>
-          <li ui-sref-active="active"><a ui-sref="retros.index">All Retros</a></li>
-          <li ui-sref-active="active"><a ui-sref="retros.new({id: retro._id})">New Retro</a></li>
-          <li ui-sref-active="active"><a href="/logout">Logout</a></li>
-        </ul>
-        <h3 class="text-muted">Scrummer</h3>
-      </div>
-
+    <div class="header">
+      <ul class="nav nav-pills pull-right">
+        <li ui-sref-active="active"><a ui-sref="root">Home</a></li>
+        <li ui-sref-active="active"><a ui-sref="retros.index">All Retros</a></li>
+        <li ui-sref-active="active"><a ui-sref="retros.new({id: retro._id})">New Retro</a></li>
+        <li ui-sref-active="active"><a href="/logout">Logout</a></li>
+      </ul>
+      <h3 class="text-muted">Scrummer</h3>
+    </div>
 
       <!--  UI-VIEW -->
       <div ui-view></div>
       <!--  UI-VIEW -->
 
-
-
+<!--
 <div ng-controller="ModalDemoCtrl">
     <script type="text/ng-template" id="myModalContent.html">
         <div class="modal-header">
@@ -54,11 +51,7 @@
     <button class="btn btn-default" ng-click="toggleAnimation()">Toggle Animation ({{ animationsEnabled }})</button>
     <div ng-show="selected">Selection from a modal: {{ selected }}</div>
 </div>
-
-
-
-
-
+-->
 
 
 
